--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -22,7 +22,7 @@
     z-index: 1;
     /* font-family: "DisplayBold"; */
     font-family: "Inter",sans-serif;
-    font-size: 230px;
+    font-size: 14rem;
     font-weight: 800;
     margin-top: 16vh;
     color: white;   
@@ -45,3 +45,38 @@ p{
     color: rgb(206, 204, 204) ;
     /* padding: */
 }
+.course-card {
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .course-card .img-container {
+    position: relative;
+  }
+  
+  .course-card img {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+  
+  .course-card .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 20px;
+    box-sizing: border-box;
+    opacity: 1;
+    transition: opacity 0.3s ease;
+    font-family: 'Inter',sans-serif;
+    font-weight:700;
+  }
+  
+  .course-card:hover .overlay {
+    opacity: 1;
+  }
+  
