--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -125,3 +125,33 @@
         font-size: 13px; /* Smallest root font size for mobile devices */
     }
 }
+.certificate {
+  width: 800px;
+  height: 600px;
+  padding: 20px;
+  text-align: center;
+  border: 10px solid #ddd;
+  margin: auto;
+  font-family: 'Arial, sans-serif';
+  position: relative;
+}
+
+.certificate h1 {
+  font-size: 2em;
+  margin-bottom: 0.5em;
+}
+
+.certificate h2 {
+  font-size: 1.5em;
+  margin: 1em 0;
+}
+
+.certificate h3 {
+  font-size: 1.2em;
+  margin: 1em 0;
+}
+
+.certificate h4 {
+  font-size: 1em;
+  margin: 1em 0;
+}
